src/styles/components/_annotation.scss
/* ... */
.pnd-annotation.is-fullpage {
    
    &.has-comment.is-collapsed{}

    .pnd-annotation__highlight-text {
        background-color: transparent;
    }
}


/* ------------------------------------ *\
   #STATUSES
\* ------------------------------------ */
.pnd-annotation.is-edited,
.pnd-annotation.is-deleted {
    animation: pulse 1s infinite ease-in-out;
}

@keyframes pulse {
    0% {
        opacity: 0.2;
    }
    50% {
        opacity: 0.5;
    }
    100% {
        opacity: 0.2;
    }
}


/* ------------------------------------ *\
   #ANNOTATION-IN-COLLAPSED-SIDEBAR
\* ------------------------------------ */
.pnd-sidebar.is-collapsed {
    .pnd-annotation,
    .pnd-annotation.is-collapsed.has-comment {
        height: $annotation-collapsed-height;
        width: $sidebar-collapsed-width - 6px;
        cursor: pointer;

        .pnd-annotation__highlight {
            display: block;
            position: absolute;
            top: 1px;
            bottom: 1px;
            left: 1px;
            right: 1px;
            max-width: none;
            padding: 0;
            background-color: $color-highlight;
        }

        .pnd-annotation__tags,
        .pnd-annotation__header,
        .pnd-annotation__highlight-text,
        .pnd-annotation__comment,
        .pnd-annotation__notebook {
            display: none;
        }

        &.is-hovered, &:hover {
            .pnd-annotation__highlight {
                background-color: $color-highlight-hover;
            }
        }
    }
}

